hphp/test/quick/clsconstant_redecl4.php.expectf
Fatal error: Cannot override previously defined constant IHerp::FOO in Derp in %s/test/quick/clsconstant_redecl4.php on line 7